# perf-pressure-traverse

./: .coverage  .dockerignore  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  README.md  STORY_TEMPLATE.md  __init__.py  apply_fix.py  create_issues.py  docker-compose.yml  pvt.py  pyproject.toml  requirements.txt  setup.py  stories.md
docs/: requirements.txt
perf_pressure_traverse/: __init__.py  __version__.py  constants.py  pvt_correlations.py
perf_pressure_traverse.egg-info/: SOURCES.txt  requires.txt  top_level.txt
perf_pressure_traverse/api_rpi/: __init__.py
perf_pressure_traverse/core/: __init__.py  solver.py
perf_pressure_traverse/flow/: __init__.py  correlations.py  friction.py  regime.py
perf_pressure_traverse/math/: __init__.py  black_oil_pvt.py  eos.py  eos_property_calculator.py  iterative.py  vle.py  z_factor.py
perf_pressure_traverse/models/: __init__.py  fluid.py  fluidmodel.py  implementations.py  pressure.py  pvt_properties.py  result.py  well.py  wellflowpath.py
perf_pressure_traverse/utils/: __init__.py  diagnostics.py  exceptions.py  units.py  validation.py  validators.py
tests/: __init__.py  test_black_oil_pvt.py  test_correlations.py  test_pvt_correlations.py
tests/math/: test_z_factor.py
tests/models/: test_fluidmodel.py  test_pressure.py  test_wellflowpath.py
tests/test_core/: test_solver.py
tests/test_flow/: __init__.py  test_correlations.py  test_friction.py  test_regime.py
tests/test_math/: test_eos.py  test_eos_comprehensive.py  test_iterative.py
tests/test_models/: test_fluid.py  test_pvt.py  test_result.py  test_units.py  test_well.py
tests/utils/: test_diagnostics.py  test_validation.py  test_validators.py
