[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-pressure-traverse"
version = "0.1.0"
description = "Pressure traverse calculation library for gas and liquid wells"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jarvan Claw", email = "jarvanclaw-dev@users.noreply.github.com"}
]
maintainers = [
    {name = "Jarvan Claw", email = "jarvanclaw-dev@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Fluid Dynamics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=2.17.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "numpydoc>=1.6.0",
    "coverage>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/jarvanclaw-dev/perf-pressure-traverse"
Documentation = "https://github.com/jarvanclaw-dev/perf-pressure-traverse/docs"
Repository = "https://github.com/jarvanclaw-dev/perf-pressure-traverse"
Issues = "https://github.com/jarvanclaw-dev/perf-pressure-traverse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["perf_pressure_traverse*"]

[tool.setuptools.package-data]
perf_pressure_traverse = ["*.txt", "*.rst"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -s --tb=short --cov=perf_pressure_traverse --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "cp36-* cp37-* cp38-* cp39-* *-musllinux_* *-win32 *-macosx_arm64"
test-command = "pytest tests/"
build-frontend = "build"

[tool.codespell]
check-filenames = true
skip = ".git,.venv,dist,build"
